JavaDocs fully complete